--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 
 @layer utilities {
   .text-shadow {
-    text-shadow: 2px 2px 4px black;
+    text-shadow: 0px 0px 4px black;
   }
   .text-shadow-md {
     text-shadow: 4px 4px 8px black;
@@ -14,5 +14,8 @@
   }
   .text-shadow-none {
     text-shadow: none;
+  }
+  .logo-shadow {
+    filter: drop-shadow(0px 0px 4px black);
   }
 }
